Added unit test and changed BaseController

--- a/src/ExampleRESTfulService/appsettings.json
+++ b/src/ExampleRESTfulService/appsettings.json
@@ -6,5 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "MaxPayloadSizeBytes": 10485760 //10mb
+  "MaxPayloadSizeBytes": 10485760, //10mb,
+  // This is an example. Change as required https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/WWW-Authenticate
+  "AuthenticateHeader": "Basic YWxhZGRpbjpvcGVuc2VzYW1l",
+  "AllowedOrigin": "www.example-allowed-origin.com",
+  "FeaturePolicy": "Test Feature Policy",
+  "ReferrerPolicy": "Test Referrer Policy"
 }
