--- a/src/ExampleRESTfulService/ExampleRESTfulService.csproj
+++ b/src/ExampleRESTfulService/ExampleRESTfulService.csproj
@@ -10,6 +10,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.13" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+	  <InternalsVisibleTo Include="ExampleRESTfulService" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
