Added token based paging

--- a/src/ExampleRESTfulService/appsettings.json
+++ b/src/ExampleRESTfulService/appsettings.json
@@ -11,5 +11,7 @@
   "AuthenticateHeader": "Basic YWxhZGRpbjpvcGVuc2VzYW1l",
   "AllowedOrigin": "www.example-allowed-origin.com",
   "FeaturePolicy": "Test Feature Policy",
-  "ReferrerPolicy": "Test Referrer Policy"
+  "ReferrerPolicy": "Test Referrer Policy",
+  "pageSize": 10,
+  "maxPageSize" :  20
 }
