--- a/test/ExampleRESTfulService.Tests/ExampleRESTfulService.Tests.csproj
+++ b/test/ExampleRESTfulService.Tests/ExampleRESTfulService.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ExampleRESTfulService\ExampleRESTfulService.csproj" />
+    <ProjectReference Include="..\..\src\ExampleRESTfulService\ExampleRESTfulService.csproj" />
   </ItemGroup>
 
 </Project>
